Replace sun.reflect.Reflection with StackWalker in test-core project